Adjust close button alignmnet, and fix select background image issue.

--- a/themes/experience-engine/assets/styles/components/discover/discover-modal.css
+++ b/themes/experience-engine/assets/styles/components/discover/discover-modal.css
@@ -11,12 +11,19 @@
 
 	& .modal-header {
 		font-style: italic;
-		padding-right: 2rem;
+		padding-right: 1.3rem;
 	}
 
-	& .modal-close {
-		padding-right: 0;
-		top: 1.778rem;
+	& .button.modal-close { /* extra class name needed to override specificity elsewhere. */
+		padding-right: 1rem;
+		top: 1rem;
+		right: .2rem;
+
+		@media(--min-xlarge-viewport) {
+			padding-right: 0;
+			top: 2.3rem;
+			right: 1.3rem;
+		}
 	}
 
 	& input[type="search"] {
@@ -28,7 +35,11 @@
 		box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.08), 0px 1px 0px rgba(0, 0, 0, 0.1),
 			inset 0px 1px 2px rgba(255, 255, 255, 0.08);
 		margin: 0 0 2.945rem;
-		padding: 1.778rem 2rem;
+		padding: 4rem 1.3rem 1.778rem 1.3rem;
+
+		@media(--min-xlarge-viewport) {
+			padding: 1.778rem 1.3rem;
+		}
 
 		& .content-wrap {
 			display: flex;
@@ -36,11 +47,15 @@
 			margin: calc(1rem * -1);
 			padding: 0;
 
+			@media (--min-xlarge-viewport) {
+				margin: 0 auto;
+			}
+
 			& > * {
 				flex-grow: 1;
 				flex-basis: calc((768px - 100%) * 999);
 				max-width: 100%;
-				margin: 0 1rem;
+				margin: 0 .889rem;
 			}
 		}
 
@@ -74,6 +89,7 @@
 
 	& select {
 		appearance: none;
+		background-color: transparent;
 		border: none;
 		font-size: 0.889rem;
 		font-weight: 600;
